--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        
+
         <div class="contenair">
             <div class="parteLeft">
                 <label for="formation" style="font-size: 18px; color: #333; font-weight: bold;">Choisissez votre
@@ -127,66 +127,76 @@
             </div>
             <div class="parteright">
                 <div class="player GK" value="GK">
-                    <!-- <i class="fas fa-plus" value="GK"></i> -->
-                    <i class="fas fa-times"></i> 
-                    <div class="DétailsJoeur">
-                        <div class="carte">
-                            <img src="https://cdn.sofifa.net/players/158/023/25_120.png" alt="Photo du joueur" class="photo-joueur">
-                            <h2 class="nom-joueur">Lionel Messi</h2>
-                            <p class="équipe">Inter Miami</p>
-                            <p class="nationality">Nat:ARG</p>
-                            <!-- <img src="https://cdn.sofifa.net/meta/team/239235/120.png" alt="photo"> -->
+                    <!-- <i class="fas fa-plus" value="GK"></i>
+                    <i class="fas fa-times"></i>  -->
+                    <div class="DetailsJoeur">
+                        <div class="player-position">
+                            <p>CM</p>
+                        </div>
+                        <div class="player-photo">
+                            <img src="https://cdn.sofifa.net/players/192/985/25_120.png" id="player-photo" alt="">
+                        </div>
+                        <div class="player-info">
+                            <p>90</p>
+                            <div class="country">
+                                <img src="https://cdn.sofifa.net/flags/be.png" id="player-country" alt="">
+                            </div>
+                            <div class="club">
+                                <img src="https://cdn.sofifa.net/meta/team/9/120.png" id="logo" alt="">
+                            </div>
+                        </div>
+                        <div class="player-name">
+                            <p>Kevin de bruyne</p>
+                        </div>
+                        <div class="player-stats">
                             <div class="stats">
-                                <p>PAC: 93</p>
-                                <p>SHO: 87</p>
-                                <p>PAS: 90</p>
-                                <p>DRI: 94</p>
-                                <p>DEF: 33</p>
-                                <p>PHY: 64</p>
-                                <!-- <img src="images/badge_gold_1.png" alt=""> -->
+                                <p>SHO <span>80</span></p>
+                                <p>PAS <span>80</span></p>
+                                <p>PAC <span>80</span></p>
+                                <p>DEF <span>80</span></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="player CB" id="CBR">
-                    <i class="fas fa-plus" value="CB"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="CB"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player CB" id="CBL">
-                    <i class="fas fa-plus" value="CB"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="CB"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player LB">
-                    <i class="fas fa-plus" value="LB"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="LB"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player RB">
-                    <i class="fas fa-plus" value="RB"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="RB"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player CM" id="CML">
-                    <i class="fas fa-plus" value="CM"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="CM"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player CM" id="CMR">
-                    <i class="fas fa-plus" value="CM"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="CM"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player CM" id="CMO">
-                    <i class="fas fa-plus" value="CM"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="CM"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player LW">
-                    <i class="fas fa-plus" value="LW"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="LW"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player RW">
-                    <i class="fas fa-plus" value="RW"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="RW"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
                 <div class="player ST">
-                    <i class="fas fa-plus" value="ST"></i>
-                    <i class="fas fa-times"></i> 
+                    <!-- <i class="fas fa-plus" value="ST"></i>
+                    <i class="fas fa-times"></i>  -->
                 </div>
             </div>
         </div>
