--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <label for="formation" style="font-size: 18px; color: #333; font-weight: bold;">Choisissez votre
                     formation :</label>
                 <select name="formation" id="formation">
-                    <option value="4-3-3">4-3-3</option>
-                    <option value="4-4-2">4-4-2</option>
+                    <option value="1">4-3-3</option>
+                    <option value="2">4-4-2</option>
                 </select>
 
                 <div class="selctJoueurGaradien">
                     <select name="formation" id="formation">
-                        <option value="0">Ajoute joueur ou Gardien</option>
+                        <option value="0">Ajouter joueur ou Gardien</option>
                         <option value="Gardien">Gardien</option>
                         <option value="Joueur">Joueur</option>
                     </select>
