--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <label for="reflexes">Reflexes :</label>
                         <input type="number" id="reflexes"  placeholder="reflexes...">
 
-                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer le joueur</button>
+                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer le gardient</button>
                     </form>
                 </div>
 
@@ -158,7 +158,7 @@
                         <label for="defending">Nouveau Defending :</label>
                         <input type="number" id="defending"  placeholder="Defending...">
 
-                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer le joueur</button>
+                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer la moification du joueur</button>
                     </form>
                 </div>
 
@@ -184,7 +184,7 @@
                         <label for="reflexes">Nouveau Reflexes :</label>
                         <input type="number" id="reflexes"  placeholder="reflexes...">
 
-                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer le joueur</button>
+                        <button class="btnEnrgestrerJoueur" type="submit">Enregistrer la modification du gardient</button>
                     </form>
                 </div>
 
