--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="contenair">
 
-            <div class="parteLeft">
+            <div class="parteLeft" id="parteLeft">
                 <label for="formation" style="font-size: 18px; color: #333; font-weight: bold;">Choisissez votre
                     formation :</label>
                 <select name="formation" id="formation">
